# SoftwareAssessment

./: .gitattributes  .gitignore  Build.sh  CMakeLists.txt  CMakePresets.json  Coverage.sh  README.md
.github/workflows/: cmake.yml
Assessments/: CMakeLists.txt
Assessments/Conversion/: CMakeLists.txt  Conversion.c  LookUpTable.c
Assessments/Conversion/Conversion/: Conversion.h
Assessments/LargeExponent/: CMakeLists.txt  LargeExponent.cpp
Assessments/LargeExponent/LargeExponent/: LargeExponent.h
CMake/: CMakeLists.txt  GenerateDoxygen.cmake
Coverage/: coverage.info
Coverage/report/: index-sort-f.html  index-sort-l.html  index.html
Coverage/report/v1/: __locale.func-sort-c.html  __locale.func.html  __locale.gcov.html  __split_buffer.func-sort-c.html  __split_buffer.func.html  __split_buffer.gcov.html  __string.func-sort-c.html  __string.func.html  __string.gcov.html  __tree.func-sort-c.html  __tree.func.html  __tree.gcov.html  atomic.func-sort-c.html  atomic.func.html  atomic.gcov.html  chrono.func-sort-c.html  chrono.func.html  chrono.gcov.html  index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  iomanip.func-sort-c.html  iomanip.func.html  iomanip.gcov.html  ios.func-sort-c.html  ios.func.html  ios.gcov.html  istream.func-sort-c.html  istream.func.html  istream.gcov.html  limits.func-sort-c.html  limits.func.html  limits.gcov.html  list.func-sort-c.html  list.func.html  list.gcov.html  locale.func-sort-c.html  (+53 more)
Coverage/report/v1/__algorithm/: all_of.h.func-sort-c.html  all_of.h.func.html  all_of.h.gcov.html  comp.h.func-sort-c.html  comp.h.func.html  comp.h.gcov.html  copy.h.func-sort-c.html  copy.h.func.html  copy.h.gcov.html  equal.h.func-sort-c.html  equal.h.func.html  equal.h.gcov.html  find.h.func-sort-c.html  find.h.func.html  find.h.gcov.html  find_if.h.func-sort-c.html  find_if.h.func.html  find_if.h.gcov.html  for_each.h.func-sort-c.html  for_each.h.func.html  for_each.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  iter_swap.h.func-sort-c.html  iter_swap.h.func.html  iter_swap.h.gcov.html  max.h.func-sort-c.html  max.h.func.html  max.h.gcov.html  min.h.func-sort-c.html  min.h.func.html  min.h.gcov.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  move_backward.h.func-sort-c.html  move_backward.h.func.html  move_backward.h.gcov.html  reverse.h.func-sort-c.html  (+5 more)
Coverage/report/v1/__functional/: index-sort-f.html  index-sort-l.html  index.html  operations.h.func-sort-c.html  operations.h.func.html  operations.h.gcov.html
Coverage/report/v1/__iterator/: advance.h.func-sort-c.html  advance.h.func.html  advance.h.gcov.html  (+21 more)
Docs/: Doxyfile.in
Docs/Doxygen/html/: _conversion_8c.html  _conversion_8h.html  _conversion_8h_source.html  _large_exponent_8cpp.html  _large_exponent_8h.html  _large_exponent_8h_source.html  _look_up_table_8c.html  annotated.html  class_rocket_lab_1_1_large_exponent-members.html  class_rocket_lab_1_1_large_exponent.html  classes.html  dir_2be0973f4a33b666823d1bbd7b3282e9.html  dir_78bda6d76c9b2f55a23606957b2493ee.html  dir_9c15fdf8c92ef18e9a1579673e9a1d8c.html  dir_afdfcef8da928307993101cbfecd899f.html  dir_e6038f7018282418e541ec985ac811fe.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  structpressure__sensor__lut__st-members.html  structpressure__sensor__lut__st.html
Docs/Doxygen/latex/: _conversion_8c.tex  _conversion_8h 2.tex  _conversion_8h.tex  _conversion_8h_source.tex  _large_exponent_8cpp.tex  _large_exponent_8h 2.tex  _large_exponent_8h_source 2.tex  _look_up_table_8c 2.tex  annotated 2.tex  class_rocket_lab_1_1_large_exponent.tex  files 2.tex  index.tex  refman 2.tex  refman.tex  structpressure__sensor__lut__st 2.tex
Tests/: CMakeLists.txt  UnitTestConversion.cpp  UnitTestConversion.h  UnitTestLargeExponent.cpp  UnitTestLargeExponent.h
(+98 files in other folders)
